--- a/src/main/resources/templates/access-denied.html
+++ b/src/main/resources/templates/access-denied.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<h2 align="center"  ><span class="access-denied"  th:utext="${msg}"></span>Nie masz dostępu do tej strony</h2>
+<h2 align="center"  ><span class="access-denied"  th:utext="${msg}"></span></h2>
 
 <div class="container">
     <img th:src="@{/images/login.jpg}" class="img-responsive center-block" width="300" height="300" alt="Logo"/>
